New pagas Gallery designed, with Css, And some changes in style.css

--- a/css/luxy_style.css
+++ b/css/luxy_style.css
@@ -2,7 +2,7 @@
  /*Colors*/
  --bg: #d0e2ad;
  --txt: #000000;
- --h1: #bdd2ac;
+ --h1: #e6e6e6;
  --p: #ffffff;
  --boarder: #c6eea6;
  --txthover: #c7e799;
