--- a/Gallery.css
+++ b/Gallery.css
@@ -1,5 +1,12 @@
 .cover {
     background-size: cover !important;
+    margin: 10px;
+    position: relative;
+}
+.cover:hover{
+    
+    box-shadow: 0 30px 40px rgba(0, 0, 0, 0.649);
+    transition: ease-in-out;
 }
 
 .outline {
